files to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 .idea/
+idemix-middlelayer-spec/PrivateCredSpecification.out
+idemix-middlelayer-spec/PrivateCredSpecification.synctex.gz
+idemix-middlelayer-spec/PrivateCredSpecification.toc
