--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,23 @@
 .idea/
-idemix-middlelayer-spec/PrivateCredSpecification.out
-idemix-middlelayer-spec/PrivateCredSpecification.synctex.gz
-idemix-middlelayer-spec/PrivateCredSpecification.toc
+
+## Core latex/pdflatex auxiliary files:
+*.aux
+*.lof
+*.log
+*.lot
+*.fls
+*.out
+*.toc
+*.fmt
+*.fot
+*.cb
+*.cb2
+
+## Build tool auxiliary files:
+*.fdb_latexmk
+*.synctex
+*.synctex(busy)
+*.synctex.gz
+*.synctex.gz(busy)
+*.pdfsync
+
